--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -55,7 +55,7 @@ cfg="${buildbase}/monetdb4/conf/MonetDB.conf"
 ;;
 5)
 # where compiled monetdb5 modules are to be found
-for d in compiler optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf
+for d in optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf extras/xml
 do
 	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d:"
 	# enable auto-loading of modules before `make install`
