--- a/monetdb5/RunMtest.bat.in
+++ b/monetdb5/RunMtest.bat.in
@@ -13,9 +13,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\monetdb5
 set srcdir=@XSOURCE@\monetdb5
 
-set MOD_PATH=%builddir%\compiler\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\compiler
-set MOD_PATH=%MOD_PATH%;%builddir%\optimizer\.libs
+set MOD_PATH=%builddir%\optimizer\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\optimizer
 set MOD_PATH=%MOD_PATH%;%builddir%\scheduler\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\scheduler
@@ -29,12 +27,14 @@ set MOD_PATH=%MOD_PATH%;%builddir%\extras\crackers\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\extras\crackers
 set MOD_PATH=%MOD_PATH%;%builddir%\extras\rdf\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\extras\rdf
+set MOD_PATH=%MOD_PATH%;%builddir%\extras\xml\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\extras\xml
 
 REM enable auto-loading of modules before `make install`
 if not exist %builddir%\extras\rdf\autoload mkdir %builddir%\extras\rdf\autoload
 copy /y %srcdir%\extras\rdf\??_*.mal %builddir%\extras\rdf\autoload
-if not exist %builddir%\modules\atoms\autoload mkdir %builddir%\modules\atoms\autoload
-copy /y %srcdir%\modules\atoms\??_*.mal %builddir%\modules\atoms\autoload
+if not exist %builddir%\extras\xml\autoload mkdir %builddir%\extras\xml\autoload
+copy /y %srcdir%\extras\xml\??_*.mal %builddir%\extras\xml\autoload
 
 set PATH=%buildbase%\clients\mapiclient;%buildbase%\testing;%PATH%
 
