--- a/monetdb5/RunMtest.in
+++ b/monetdb5/RunMtest.in
@@ -25,7 +25,7 @@ srcdir=`cd '@srcdir@'; pwd`
 uname=`uname`
 
 # where compiled monetdb5 modules are to be found
-for d in compiler optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf
+for d in optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf extra/xml
 do
 	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
 	# enable auto-loading of modules before `make install`
