Created NOINST library with some useful stuff. Revert back to having only a single instance of MT_lockf in this new library that is used both by GDK and merovingian (through msabaoth). Also put the Windows-specific implementation of opendir and friends here.

--- a/NT/monetdb_config.h.in
+++ b/NT/monetdb_config.h.in
@@ -19,13 +19,14 @@
 #define _CRT_SECURE_NO_DEPRECATE 1
 #endif
 
+#include <malloc.h>		/* we need malloc.h for alloca() */
+
 #if defined(_DEBUG) && defined(_CRTDBG_MAP_ALLOC)
 /* In this case, malloc and friends are redefined in crtdbg.h to debug
    versions.  We need to include stdlib.h and malloc.h first or else
    we get conflicting declarations.
 */
 #include <stdlib.h>
-#include <malloc.h>
 #include <crtdbg.h>
 #endif
 
