--- a/monetdb4/monet/Makefile.ag
+++ b/monetdb4/monet/Makefile.ag
@@ -27,6 +27,7 @@
 
 INCLUDES = ../../common/options \
 		   ../../common/stream \
+		   ../../common/utils \
 		   ../../clients/mapilib \
 		   ../../gdk
 
