--- a/sql/backends/monet5/merovingian/utils/Makefile.ag
+++ b/sql/backends/monet5/merovingian/utils/Makefile.ag
@@ -18,7 +18,8 @@
 # MONETDB5: Sabaoth
 INCLUDES = ../../../../../monetdb5/misc \
 		   ../../../../../common/stream \
-		   ../../../../../common/options
+		   ../../../../../common/options \
+		   ../../../../../common/utils
 
 EXTRA_DIST = \
 	control.h \
