--- a/common/utils/Makefile.ag
+++ b/common/utils/Makefile.ag
@@ -15,26 +15,13 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-man_MANS = monetdb5.conf.5
+## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = monetdb5.conf.in $(man_MANS)
+MTSAFE
 
-INCLUDES = ../../gdk ../../common/utils
+EXTRA_DIST = mutils.h
 
-lib_sabaoth = {
+lib_mutils  =  {
 	NOINST
-	SOURCES = msabaoth.h msabaoth.c
+	SOURCES = mutils.c
 }
-
-headers_conf = {
-	HEADERS = conf
-	DIR = sysconfdir
-	SOURCES = monetdb5.conf
-}
-
-monetdb_var_logdir = $(localstatedir)/log/monetdb
-monetdb_var_log_DATA = 
-monetdb_var_rundir = $(localstatedir)/run/monetdb
-monetdb_var_run_DATA = 
-monetdb_var_dbfarmdir = $(localstatedir)/monetdb5/dbfarm
-monetdb_var_dbfarm_DATA = 
