--- a/monetdb5/mal/Makefile.ag
+++ b/monetdb5/mal/Makefile.ag
@@ -18,6 +18,7 @@
 INCLUDES = ../misc \
 		   ../../common/options \
 		   ../../common/stream \
+		   ../../common/utils \
 		   ../../clients/mapilib \
 		   ../../gdk \
 		   $(READLINE_INCS) $(openssl_CFLAGS)
