Implemented language option in ODBC DSN. Also increased the buffer for the database name to 1024 bytes.

--- a/vertoo.config
+++ b/vertoo.config
@@ -26,8 +26,8 @@ main.addAnchors("MonetDB/NT/MonetDB-Common/MonetDB-Common64.vdproj",
                 arguments(pattern = '"Value" = "8:%v"',
                           format = '@normal'))
 main.addAnchors("clients/src/odbc/winsetup/setup.rc",
-                'VALUE "FileVersion", "%v\\0"',
-                'VALUE "ProductVersion", "%v\\0"',
+                'VALUE "FileVersion", "%v"',
+                'VALUE "ProductVersion", "%v"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
 main.addAnchors("clients/src/odbc/driver/driver.rc",
