--- a/sql/Makefile.ag
+++ b/sql/Makefile.ag
@@ -15,13 +15,13 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = include common storage server backends sql
+SUBDIRS = include common storage server backends sql NATIVE_WIN32?NT
 
 EXTRA_DIST = RunMtest.in RunMtest.bat.in \
 		RunMapprove.in RunMapprove.bat.in \
 		RunMserver.in RunMserver.bat.in \
 		RunMserver.bat.in
-EXTRA_DIST_DIR = test benchmarks odbc/samples/Tests jdbc/tests NT
+EXTRA_DIST_DIR = test benchmarks odbc/samples/Tests jdbc/tests
 
 headers_txt = {
 	HEADERS = txt
