--- a/pathfinder/Makefile.ag
+++ b/pathfinder/Makefile.ag
@@ -25,12 +25,12 @@
 # Rights Reserved.
 #
 
-SUBDIRS = compiler HAVE_MONETDB4?runtime modules src 
+SUBDIRS = compiler HAVE_MONETDB4?runtime modules src NATIVE_WIN32?NT
 
 EXTRA_DIST = RunMtest.in RunMtest.bat.in \
 		RunMapprove.in RunMapprove.bat.in \
 		RunMserver.in RunMserver.bat.in
-EXTRA_DIST_DIR = NT tests benchmarks
+EXTRA_DIST_DIR = tests benchmarks
 
 TESTS = RunMtest
 TESTS_ENVIRONMENT = $(SHELL)
