--- a/pathfinder/NT/Makefile.ag
+++ b/pathfinder/NT/Makefile.ag
@@ -15,11 +15,8 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = mapilib mapiclient HAVE_ODBC?odbc HAVE_PERL?perl php HAVE_RUBYGEM?ruby examples HAVE_PYTHON?python NATIVE_WIN32?NT
-
-EXTRA_DIST = RunMtest.in RunMtest.bat.in \
-		RunMapprove.in \
-		Runmclient.bat.in
-
-TESTS = RunMtest
-TESTS_ENVIRONMENT = $(SHELL)
+scripts_bat = {
+	EXT = bat
+	DIR = prefix
+	SOURCES = MPFclient.bat MPFserver.bat MXQserver.bat pf.bat
+}
