--- a/pathfinder/src/Makefile.ag
+++ b/pathfinder/src/Makefile.ag
@@ -14,4 +14,4 @@
 # Portions created by CWI are Copyright (C) 1997-2008 CWI.
 # All Rights Reserved.
 
-SUBDIRS = HAVE_MONETDB4?tools sqlhelpers 
+SUBDIRS = sqlhelpers 
