--- a/monetdb4/modules/mnetcdf/Makefile.ag
+++ b/monetdb4/modules/mnetcdf/Makefile.ag
@@ -20,7 +20,7 @@ INCLUDES = ../../monet ../plain \
 	../../../common/stream \
 	../../../gdk \
 	$(zlib_CFLAGS) $(BZ_CFLAGS) $(HWCOUNTERS_INCS) $(PCL_CFLAGS) \
-	$(NETCDF_CFLAGS)
+	$(netcdf_CFLAGS)
 MTSAFE
 
 LIB_mnetcdf = {
@@ -33,7 +33,7 @@ LIB_mnetcdf = {
 		../../monet/libmonet ../plain/lib_algebra \
 		$(SOCKET_LIBS) $(zlib_LIBS) $(BZ_LIBS) \
 		$(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) \
-		$(NETCDF_LIBS) $(MATH_LIBS)
+		$(netcdf_LIBS) $(MATH_LIBS)
 }
 
 headers_mil = {
