install test executables in bindir

--- a/clients/perl/Tests/Makefile.ag
+++ b/clients/perl/Tests/Makefile.ag
@@ -19,7 +19,7 @@ MTSAFE
 
 scripts_pl = {
 	COND = HAVE_TESTING
-	DIR = libdir/monetdb/tests
+	DIR = bindir
 	SOURCES = sqlsample.pl.in milsample.pl.in malsample.pl.in
 }
 
