--- a/clients/examples/php/Makefile.ag
+++ b/clients/examples/php/Makefile.ag
@@ -19,6 +19,6 @@ MTSAFE
 
 scripts_php = {
 	COND = HAVE_TESTING
-	DIR = libdir/monetdb/tests
+	DIR = bindir
 	SOURCES = sqlsample.php xquerysample.php
 }
