--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -62,36 +62,39 @@ lib__sql = {
 }
 
 
-lib_embeddedsql5 = {
-	SOURCES = embeddedclient.c.in
-	LIBS = ../../server/libsqlserver \
-		   ../../storage/libstore \
-		   ../../storage/bat/libbatstore \
-		   ../../storage/restrict/librestrictstore \
-		   ../../storage/bpm/libbpmstore \
-		   ../../common/libsqlcommon \
-		   ../../../monetdb5/tools/libmonetdb5 \
-		   ../../../gdk/libbat \
-		   ../../../clients/mapilib/libmapi \
-		   ../../../common/stream/libstream \
-		   $(READLINE_LIBS) $(PTHREAD_LIBS)
-}
-
-bin_mbeddedsql5 = {
-	SOURCES = prog.c
-	LIBS = libembeddedsql5 \
-		   ../../server/libsqlserver \
-		   ../../storage/libstore \
-		   ../../storage/bat/libbatstore \
-		   ../../storage/restrict/librestrictstore \
-		   ../../storage/bpm/libbpmstore \
-		   ../../common/libsqlcommon \
-		   ../../../monetdb5/tools/libmonetdb5 \
-		   ../../../gdk/libbat \
-		   ../../../clients/mapilib/libmapi \
-		   ../../../common/stream/libstream \
-		   $(READLINE_LIBS) $(PTHREAD_LIBS) $(curl_LIBS)
-}
+# embedded is disabled, but keep building instructions for the moment we
+# like to revive this or someone whould like to build this for some reason
+#
+#lib_embeddedsql5 = {
+#	SOURCES = embeddedclient.c.in
+#	LIBS = ../../server/libsqlserver \
+#		   ../../storage/libstore \
+#		   ../../storage/bat/libbatstore \
+#		   ../../storage/restrict/librestrictstore \
+#		   ../../storage/bpm/libbpmstore \
+#		   ../../common/libsqlcommon \
+#		   ../../../monetdb5/tools/libmonetdb5 \
+#		   ../../../gdk/libbat \
+#		   ../../../clients/mapilib/libmapi \
+#		   ../../../common/stream/libstream \
+#		   $(READLINE_LIBS) $(PTHREAD_LIBS)
+#}
+#
+#bin_mbeddedsql5 = {
+#	SOURCES = prog.c
+#	LIBS = libembeddedsql5 \
+#		   ../../server/libsqlserver \
+#		   ../../storage/libstore \
+#		   ../../storage/bat/libbatstore \
+#		   ../../storage/restrict/librestrictstore \
+#		   ../../storage/bpm/libbpmstore \
+#		   ../../common/libsqlcommon \
+#		   ../../../monetdb5/tools/libmonetdb5 \
+#		   ../../../gdk/libbat \
+#		   ../../../clients/mapilib/libmapi \
+#		   ../../../common/stream/libstream \
+#		   $(READLINE_LIBS) $(PTHREAD_LIBS) $(curl_LIBS)
+#}
 
 headers_mal = {
 	HEADERS = mal
